--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
 </head>
 <body>
     <header>
-        <div class="container">
             <nav class="nav">
-                <a href="#" class="logo"><span class="logo-accent">WEB</span>STUDIO</a>
+                <a href=”./index.html” class="logo">WEBSTUDIO</a>
                 <ul class="">
                     <li><a href="#studio">Studio</a></li>
                     <li><a href="#portfolio">Portfolio</a></li>
@@ -20,15 +19,15 @@
                 <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
-        </div>
     </header>
     <main>
         <div class="container">
             <section class="order-service">
-                <h1 class="main-title">Effective Solutions<br>for Your Business</h1>
+                <h1 class="main-title">Effective Solutions for Your Business</h1>
                 <button type="button">Order Service</button>
             </section>
             <section class="features">
+                <h2>Futures</h2>
                     <ul class="features-list">
                         <li class="feature-item">
                             <h3>Strategy</h3>
@@ -52,22 +51,22 @@
                 <h2 class="team-title">Our Team</h2>
                 <ul class="team-list">
                     <li class="team-card">
-                        <img src="/images/designer-1.jpg" alt="Team Member">
+                        <img src="/images/designer-1.jpg" alt="Team Member" width="264">
                         <h3>Mark Guerrero</h3>
                         <p>Product Designer</p>
                     </li>
                     <li class="team-card">
-                        <img src="/images/developer-1.jpg" alt="Team Member">
+                        <img src="/images/developer-1.jpg" alt="Team Member" width="264">
                         <h3>Tom Ford</h3>
                         <p>Frontend Developer</p>
                     </li>
                     <li class="team-card">
-                        <img src="/images/marketing-1.jpg" alt="Team Member">
+                        <img src="/images/marketing-1.jpg" alt="Team Member" width="264">
                         <h3>Camila Garcia</h3>
                         <p>Marketing</p>
                     </li>
                     <li class="team-card">
-                        <img src="/images/ui-designer-1.jpg" alt="Team Member">
+                        <img src="/images/ui-designer-1.jpg" alt="Team Member" width="264">
                         <h3>Daniel Wilson</h3>
                         <p>UI Designer</p>
                     </li>
@@ -77,7 +76,7 @@
     </main>
     <footer>
         <div class="container">
-            <a href="#" class="logo"><span class="logo-accent">WEB</span>STUDIO</a>
+            <a href="./index.html" class="logo">WEBSTUDIO</a>
             <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
         </div>
     </footer>
