--- a/index.html
+++ b/index.html
@@ -8,26 +8,27 @@
 <body>
     <header>
             <nav class="nav">
-                <a href=”./index.html” class="logo">WEBSTUDIO</a>
+                <a href="./index.html">WEBSTUDIO</a>
                 <ul class="">
                     <li><a href="#studio">Studio</a></li>
                     <li><a href="#portfolio">Portfolio</a></li>
                     <li><a href="#contacts">Contacts</a></li>
                 </ul>
             </nav>
-            <ul class="contacts">
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-            </ul>
+            <address>
+                    <ul class="contacts">
+                    <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                    <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+                </ul>
+            </address>
     </header>
     <main>
-        <div class="container">
             <section class="order-service">
                 <h1 class="main-title">Effective Solutions for Your Business</h1>
                 <button type="button">Order Service</button>
             </section>
             <section class="features">
-                <h2>Futures</h2>
+                <h2 style="display: none;">Features</h2>
                     <ul class="features-list">
                         <li class="feature-item">
                             <h3>Strategy</h3>
@@ -51,32 +52,31 @@
                 <h2 class="team-title">Our Team</h2>
                 <ul class="team-list">
                     <li class="team-card">
-                        <img src="/images/designer-1.jpg" alt="Team Member" width="264">
+                        <img src="./images/designer.jpg"Team Member" width="264">
                         <h3>Mark Guerrero</h3>
                         <p>Product Designer</p>
                     </li>
                     <li class="team-card">
-                        <img src="/images/developer-1.jpg" alt="Team Member" width="264">
+                        <img src="./images/developer.jpg" alt="Team Member" width="264">
                         <h3>Tom Ford</h3>
                         <p>Frontend Developer</p>
                     </li>
                     <li class="team-card">
-                        <img src="/images/marketing-1.jpg" alt="Team Member" width="264">
+                        <img src="./images/marketing.jpg" alt="Team Member" width="264">
                         <h3>Camila Garcia</h3>
                         <p>Marketing</p>
                     </li>
                     <li class="team-card">
-                        <img src="/images/ui-designer-1.jpg" alt="Team Member" width="264">
+                        <img src="./images/ui-designer.jpg" alt="Team Member" width="264">
                         <h3>Daniel Wilson</h3>
                         <p>UI Designer</p>
                     </li>
                 </ul>
             </section>
-        </div>
     </main>
     <footer>
         <div class="container">
-            <a href="./index.html" class="logo">WEBSTUDIO</a>
+            <a href="./index.html">WebStudio</a>
             <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
         </div>
     </footer>
