--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <header>
             <nav class="nav">
-                <a href="./index.html">WEBSTUDIO</a>
+                <a href="./index.html">WebStudio</a>
                 <ul class="">
                     <li><a href="#studio">Studio</a></li>
                     <li><a href="#portfolio">Portfolio</a></li>
@@ -52,7 +52,7 @@
                 <h2 class="team-title">Our Team</h2>
                 <ul class="team-list">
                     <li class="team-card">
-                        <img src="./images/designer.jpg"Team Member" width="264">
+                        <img src="./images/designer.jpg" alt="Team Member" width="264">
                         <h3>Mark Guerrero</h3>
                         <p>Product Designer</p>
                     </li>
